regex: fix typo in definition of MIN

* lib/regex_internal.h (MIN): Fix typo.  Problem reported by Thomas
Schwinge in <http://sourceware.org/bugzilla/show_bug.cgi?id=11638#c4>.